tests/bad/expr-statements/nested_block_yield.ae
/// fail: Must yield a value in this branch

def main() {
    let x = if 5 < 10 {
        {
            yield "bye"
        }
    } else {
        yield "hi"
    }
}